--- a/Changes
+++ b/Changes
@@ -40,7 +40,8 @@
     * The precompiled methods don't use get_field_id_cache, get_class_var_id_cache, get_method_id_cache.
   [Internal Ineffective Changes]
     * Rename the opcode SPVM_OPCODE_C_ID_CALL_INSTANCE_METHOD_BY_SIGNATURE to SPVM_OPCODE_C_ID_CALL_INSTANCE_METHOD_BY_NAME.
-    * Remove signature_id fields in spvm_runtime_class_var, spvm_runtime_field, spvm_runtime_method, 
+    * Remove signature_id fields in spvm_runtime_class_var, spvm_runtime_field, spvm_runtime_method.
+    * Add args_length field to spvm_call_method.h.
 0.9632 2022-08-01
   [Internal Ineffective Changes]
     * Add set_field_object_by_name_v2 native API.
