--- a/Changes
+++ b/Changes
@@ -52,6 +52,30 @@
       static method new : List ($array : object[]...)
       [After]
       static method new : List ($array = undef : object[])
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+
+        static method copy_byte : byte[] ($array : byte[])
+
+      Copy a C<byte> array.
+
+      If the array is not defined, return C<undef>.
+
+      [After]
+      
+        static method copy_byte : byte[] ($array : byte[], $offset = 0 : int, $length = -1 : int)
+
+      Create a new C<byte> array with the length sepcified by the argument, and copy the elements of the C<byte> array from the offset to the offset + the length - C<1> to the created array.
+
+      If the length is less than C<0>, the length is calcurated from the length of the array and the offset.
+
+      The array must be defined. Otherwise an exception will be thrown.
+
+      The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
+    * Array->copy_range_byte calls Array->copy.
+    
   [Deprecation]
     * The following methods of Point class are deprecated.
       # Point->new_xy($x, $y) is deprecated. Use Point->new($x, $y) instead. This method will be removed after 2022-09-03
@@ -59,6 +83,12 @@
     * The following methods of Point3D class are deprecated.
       # Point3D->new_xyz($x, $y, $z) is deprecated. Use Point3D->new($x, $y, $z) instead. This method will be removed after 2022-09-03
       static method new_xyz : Point3D ($x : int, $y : int, $z : int)
+    * The following methods of Array class are deprecated.
+      static method copy_range_byte : byte[] ($array : byte[], $offset : int, $length : int) {
+        warn "Array->copy_range_byte(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_byte($array, $offset, $length);
+      }
+      
   [Test Fix]
     * Add Point3D tests. These tests are removed wrongly.
 0.9633 2022-08-03
