--- a/Changes
+++ b/Changes
@@ -75,6 +75,121 @@
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
     * Array->copy_range_byte calls Array->copy.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+
+        static method copy_short : short[] ($array : short[])
+
+      Copy a C<short> array.
+
+      If the array is not defined, return C<undef>.
+
+      [After]
+      
+        static method copy_short : short[] ($array : short[], $offset = 0 : int, $length = -1 : int)
+
+      Create a new C<short> array with the length sepcified by the argument, and copy the elements of the C<short> array from the offset to the offset + the length - C<1> to the created array.
+
+      If the length is less than C<0>, the length is calcurated from the length of the array and the offset.
+
+      The array must be defined. Otherwise an exception will be thrown.
+
+      The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
+    * Array->copy_range_short calls Array->copy.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+
+        static method copy_int : int[] ($array : int[])
+
+      Copy a C<int> array.
+
+      If the array is not defined, return C<undef>.
+
+      [After]
+      
+        static method copy_int : int[] ($array : int[], $offset = 0 : int, $length = -1 : int)
+
+      Create a new C<int> array with the length sepcified by the argument, and copy the elements of the C<int> array from the offset to the offset + the length - C<1> to the created array.
+
+      If the length is less than C<0>, the length is calcurated from the length of the array and the offset.
+
+      The array must be defined. Otherwise an exception will be thrown.
+
+      The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
+    * Array->copy_range_int calls Array->copy.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+
+        static method copy_long : long[] ($array : long[])
+
+      Copy a C<long> array.
+
+      If the array is not defined, return C<undef>.
+
+      [After]
+      
+        static method copy_long : long[] ($array : long[], $offset = 0 : int, $length = -1 : int)
+
+      Create a new C<long> array with the length sepcified by the argument, and copy the elements of the C<long> array from the offset to the offset + the length - C<1> to the created array.
+
+      If the length is less than C<0>, the length is calcurated from the length of the array and the offset.
+
+      The array must be defined. Otherwise an exception will be thrown.
+
+      The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
+    * Array->copy_range_long calls Array->copy.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+
+        static method copy_float : float[] ($array : float[])
+
+      Copy a C<float> array.
+
+      If the array is not defined, return C<undef>.
+
+      [After]
+      
+        static method copy_float : float[] ($array : float[], $offset = 0 : int, $length = -1 : int)
+
+      Create a new C<float> array with the length sepcified by the argument, and copy the elements of the C<float> array from the offset to the offset + the length - C<1> to the created array.
+
+      If the length is less than C<0>, the length is calcurated from the length of the array and the offset.
+
+      The array must be defined. Otherwise an exception will be thrown.
+
+      The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
+    * Array->copy_range_float calls Array->copy.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+
+        static method copy_double : double[] ($array : double[])
+
+      Copy a C<double> array.
+
+      If the array is not defined, return C<undef>.
+
+      [After]
+      
+        static method copy_double : double[] ($array : double[], $offset = 0 : int, $length = -1 : int)
+
+      Create a new C<double> array with the length sepcified by the argument, and copy the elements of the C<double> array from the offset to the offset + the length - C<1> to the created array.
+
+      If the length is less than C<0>, the length is calcurated from the length of the array and the offset.
+
+      The array must be defined. Otherwise an exception will be thrown.
+
+      The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
+    * Array->copy_range_double calls Array->copy.
     
   [Deprecation]
     * The following methods of Point class are deprecated.
@@ -87,6 +202,26 @@
       static method copy_range_byte : byte[] ($array : byte[], $offset : int, $length : int) {
         warn "Array->copy_range_byte(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
         return &copy_byte($array, $offset, $length);
+      }
+      static method copy_range_short : short[] ($array : short[], $offset : int, $length : int) {
+        warn "Array->copy_range_short(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_short($array, $offset, $length);
+      }
+      static method copy_range_int : int[] ($array : int[], $offset : int, $length : int) {
+        warn "Array->copy_range_int(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_int($array, $offset, $length);
+      }
+      static method copy_range_long : long[] ($array : long[], $offset : int, $length : int) {
+        warn "Array->copy_range_long(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_long($array, $offset, $length);
+      }
+      static method copy_range_float : float[] ($array : float[], $offset : int, $length : int) {
+        warn "Array->copy_range_float(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_float($array, $offset, $length);
+      }
+      static method copy_range_double : double[] ($array : double[], $offset : int, $length : int) {
+        warn "Array->copy_range_double(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_double($array, $offset, $length);
       }
       
   [Test Fix]
