--- a/Changes
+++ b/Changes
@@ -74,7 +74,7 @@
       The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
-    * Array->copy_range_byte calls Array->copy.
+    * Array->copy_range_byte calls Array->copy_byte.
     * The defintion and implementation of the following method of Array class is changed.
       [Before]
 
@@ -97,7 +97,7 @@
       The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
-    * Array->copy_range_short calls Array->copy.
+    * Array->copy_range_short calls Array->copy_short.
     * The defintion and implementation of the following method of Array class is changed.
       [Before]
 
@@ -120,7 +120,7 @@
       The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
-    * Array->copy_range_int calls Array->copy.
+    * Array->copy_range_int calls Array->copy_int.
     * The defintion and implementation of the following method of Array class is changed.
       [Before]
 
@@ -143,7 +143,7 @@
       The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
-    * Array->copy_range_long calls Array->copy.
+    * Array->copy_range_long calls Array->copy_long.
     * The defintion and implementation of the following method of Array class is changed.
       [Before]
 
@@ -166,7 +166,7 @@
       The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
-    * Array->copy_range_float calls Array->copy.
+    * Array->copy_range_float calls Array->copy_float.
     * The defintion and implementation of the following method of Array class is changed.
       [Before]
 
@@ -189,7 +189,30 @@
       The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
-    * Array->copy_range_double calls Array->copy.
+    * Array->copy_range_double calls Array->copy_double.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+
+        static method copy_object : object[] ($array : object[], $cloner : Cloner)
+      
+      Copy an object array. Each element is cloned by the L<Cloner|SPVM::Cloner>.
+      [After]
+      
+        static method copy_object : object[] ($array : object[], $cloner = undef : Cloner, $offset = 0 : int, $legnth = -1 : int)
+
+      Create a new object array with the length sepcified by the argument, and clone the elements of the object array by the length from the offset to the created array.
+
+      Each element is cloned by the L<Cloner|SPVM::Cloner>.
+
+      The array must be defined. Otherwise an exception will be thrown.
+
+      The offset must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The length must be greater than or equal to C<0>. Otherwise an exception will be thrown.
+
+      The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
+
+    * Array->copy_range_object calls Array->copy_object.
     
   [Deprecation]
     * The following methods of Point class are deprecated.
@@ -222,6 +245,14 @@
       static method copy_range_double : double[] ($array : double[], $offset : int, $length : int) {
         warn "Array->copy_range_double(\$array, \$offset, \$length) is deprecated. Use Array->copy(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
         return &copy_double($array, $offset, $length);
+      }
+      static method copy_range_object_address : object[] ($array : object[], $offset : int, $length : int) {
+        warn "Array->copy_range_object_address(\$array, \$offset, \$length) is deprecated. Use Array->copy_object_address(\$array, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_range_object($array, $offset, $length, undef);
+      }
+      static method copy_range_object : object[] ($array : object[], $offset : int, $length : int, $cloner : Cloner) {
+        warn "Array->copy_range_object(\$array, \$offset, \$length, \$cloner) is deprecated. Use Array->copy_object(\$array, \$cloner, \$offset, \$length) instead. This method will be removed after 2022-09-03";
+        return &copy_object($array, $cloner, $offset, $length);
       }
       
   [Test Fix]
