--- a/Changes
+++ b/Changes
@@ -222,9 +222,6 @@
 
       If the array is not defined, return C<undef>.
 
-
-
-
       [After]
       
         static method copy_string : string[] ($array : string[], $offset = 0 : int, $length = -1 : int)
@@ -258,6 +255,215 @@
 
       The offset + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will be thrown.
     * Array->copy_range_string_address calls Array->copy_string_address.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_byte : void ($dest : byte[], $dest_offset : int, $element : byte, $length : int)
+
+      Set the range of the elements of the destination C<byte> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_byte : void ($array : byte[], $element : byte, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<byte> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_short : void ($dest : short[], $dest_offset : int, $element : short, $length : int)
+
+      Set the range of the elements of the destination C<short> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_short : void ($array : short[], $element : short, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<short> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_int : void ($dest : int[], $dest_offset : int, $element : int, $length : int)
+
+      Set the range of the elements of the destination C<int> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_int : void ($array : int[], $element : int, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<int> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_long : void ($dest : long[], $dest_offset : int, $element : long, $length : int)
+
+      Set the range of the elements of the destination C<long> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_long : void ($array : long[], $element : long, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<long> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_float : void ($dest : float[], $dest_offset : int, $element : float, $length : int)
+
+      Set the range of the elements of the destination C<float> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_float : void ($array : float[], $element : float, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<float> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_double : void ($dest : double[], $dest_offset : int, $element : double, $length : int)
+
+      Set the range of the elements of the destination C<double> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_double : void ($array : double[], $element : double, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<double> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_string : void ($dest : string[], $dest_offset : int, $element : string, $length : int)
+
+      Set the range of the elements of the destination C<string> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_string : void ($array : string[], $element : string, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<string> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+    * The defintion and implementation of the following method of Array class is changed.
+      [Before]
+    
+        static method memset_object : void ($dest : object[], $dest_offset : int, $element : object, $length : int)
+
+      Set the range of the elements of the destination C<object> array to the element specified by the argument.
+
+      The range of the elements of the destination array is by the length from the offset of the destination to the offset of the destination.
+
+      The destination must be defined. Otherwise an exception will occur.
+
+      The offset of the destination must be greater than or equal to C<0>. Otherwise an exception will occur.
+
+      The length must be greater than or equal to 0. Otherwise an exception will occur.
+
+      The offset of the destination + the length specified by the argument must be less than or equal to the length of the destination. Otherwise an exception will occur.
+      [After]
+      
+        static method memset_object : void ($array : object[], $element : object, $offset = 0 : int, $length = -1 : int)
+      
+      Set the range of the elements of the C<object> array to the element specified by the argument.
+      The range of the elements of the array is by the length from the offset.
+      If the length is less than C<0>, the length is calculated from the length of the array and the offset.
+      The array must be defined. Otherwise an exception will occur.
+      The offset of the array must be greater than or equal to C<0>. Otherwise an exception will occur.
+      The offset of the array + the length specified by the argument must be less than or equal to the length of the array. Otherwise an exception will occur.
+
     
   [Deprecation]
     * The following methods of Point class are deprecated.
