--- a/Changes
+++ b/Changes
@@ -1,8 +1,11 @@
 0.9635 2022-08-03
+  [New Features]
+    * If the depth of the method call is over 10000, an exception is thrown.
   [Specification Bug Fix]
     * The escape character of the string literal "\0" becomes 0x24 ($). This was wrongly 0x44 (D).
   [Incompatible Changes]
     * The escape character of the string literal "\0" becomes 0x24 ($). This was wrongly 0x44 (D).
+    * If the depth of the method call is over 10000, an exception is thrown.
   [Internal Changes]
     * Remove inline expansion of precompile function in the same class. This maybe reduce the performance of the method call.
     * Call depth is managed.
